[fix] Fix the alignnment issue inside the task viewer

--- a/style.css
+++ b/style.css
@@ -32,6 +32,6 @@ html{
 
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: flex-start;
     justify-content: flex-start;
 }
